--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,11 @@
         <a href="mailto:jaredgrahamholmes@gmail.com">jaredgrahamholmes@gmail.com</a>
       </p>
       <p class="contact-detail">
+        <b>Phone:</b>
+        <br>
+        <a href="tel:+27723054888">072 305 4888</a>
+      </p>
+      <p class="contact-detail">
         <b>LinkedIn:</b>
         <br>
         <a href="https://www.linkedin.com/in/jared-holmes-20b198189/" target="_blank">Jared Holmes</a>
