Added MyMoney project

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         I’m a Product Designer. I love designing beautiful, functional software products that provide real solutions to problems. Here are some of them.
       </p>
       <div class="projects ">
+        <a href="/mymoney.html" class="project" id="mymoney">
+          <div class="project-image">
+            <img src="img/mm1.png" alt="Atmocast weather app">
+          </div>
+          <div class="project-text">
+            <h3>Absa MyMoney</h3>
+            <p class="project-tagline">Understand your money</p>
+            <h4>Roles</h4>
+            <p>Lead Product Designer</p>
+            <h4>Tools</h4>
+            <p>Figma | Design Thinking</p>
+          </div>
+        </a>
+
         <a href="/atmocast.html" class="project" id="atmocast">
           <div class="project-image">
             <img src="img/atmo2.png" alt="Atmocast weather app">
