Added Buy project

--- a/atmocast.html
+++ b/atmocast.html
@@ -42,7 +42,7 @@
           <img src="img/atmo2.png" alt="Atmocast on phones">
         </div>
         <div class="cb-text cb-text-right">
-          <h1 class="cb-tagline">Everything you need, nothing you don’t</h1>
+          <h1 class="cb-tagline">Everything You Need, Nothing You Don’t</h1>
           <div class="cb-description">
             <p>
               Atmocast is a minimalist weather website and mobile app, designed to take the visual and informational clutter out of the act of checking the weather forecast.
