--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
           </div>
         </a>
 
+        <a href="/buy.html" class="project" id="buy">
+          <div class="project-image">
+            <img src="img/buy1.png" alt="Atmocast weather app">
+          </div>
+          <div class="project-text">
+            <h3>Absa Buy</h3>
+            <p class="project-tagline">More than a banking app</p>
+            <h4>Roles</h4>
+            <p>Lead Product Designer</p>
+            <h4>Tools</h4>
+            <p>Figma | Design Thinking | User Research</p>
+          </div>
+        </a>
+
         <a href="/atmocast.html" class="project" id="atmocast">
           <div class="project-image">
             <img src="img/atmo2.png" alt="Atmocast weather app">
