--- a/mymoney.html
+++ b/mymoney.html
@@ -42,7 +42,7 @@
           <img src="img/mm2.png" alt="Absa MyMoney budget">
         </div>
         <div class="cb-text cb-text-right">
-          <h1 class="cb-tagline">Get on track with your finances</h1>
+          <h1 class="cb-tagline">Get on Track with your Finances</h1>
           <div class="cb-description">
             <p>
               For the 3 million+ users of the Absa Banking App, MyMoney is a tool that offers the chance to get on top of personal finance.
@@ -56,7 +56,7 @@
 
       <div class="cb flex-reverse-small">
         <div class="cb-text cb-text-left">
-          <h1 class="cb-tagline">Learn, then do</h1>
+          <h1 class="cb-tagline">Learn, then Do</h1>
           <div class="cb-description">
             <p>
               MyMoney aims to assist users in understanding their financial position by providing insights into where their money goes every month, and where their net worth sits. This, however, is only the beginning.
@@ -73,7 +73,7 @@
 
       <div class="cb">
         <div class="cb-text cb-text-right">
-          <h1 class="cb-tagline">My contributions</h1>
+          <h1 class="cb-tagline">My Contributions</h1>
           <div class="cb-description">
             <p>
               Due to the scale and innovative nature of MyMoney, I had the opportunity to make significant contributions to the Absa design team, including:
