Added Credit Coach

--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,12 @@
       <p class="contact-detail">
         <b>Phone:</b>
         <br>
-        <a href="tel:+27723054888">072 305 4888</a>
+        <a href="tel:+27723054888">+27 72 305 4888</a>
       </p>
       <p class="contact-detail">
         <b>LinkedIn:</b>
         <br>
-        <a href="https://www.linkedin.com/in/jared-holmes-20b198189/" target="_blank">Jared Holmes</a>
+        <a href="https://www.linkedin.com/in/jazza/" target="_blank">Jared Holmes</a>
       </p>
       <p> </p>
     </div>
