--- a/index.html
+++ b/index.html
@@ -30,9 +30,23 @@
         I’m a Product Designer. I love designing beautiful, functional software products that provide real solutions to problems. Here are some of them.
       </p>
       <div class="projects ">
-        <a href="/mymoney.html" class="project" id="mymoney">
+        <a href="/credit-coach.html" class="project" id="mymoney">
           <div class="project-image">
-            <img src="img/mm1.png" alt="Atmocast weather app">
+            <img src="img/mm1.png" alt="Absa Credit Coach">
+          </div>
+          <div class="project-text">
+            <h3>Absa Credit Coach</h3>
+            <p class="project-tagline">Own your credit score</p>
+            <h4>Roles</h4>
+            <p>Lead Product Designer | Service Designer</p>
+            <h4>Tools</h4>
+            <p>Figma | Design Thinking</p>
+          </div>
+        </a>
+
+        <a href="/mymoney.html" class="project" id="credit-coach">
+          <div class="project-image">
+            <img src="img/mm1.png" alt="Absa MyMoney">
           </div>
           <div class="project-text">
             <h3>Absa MyMoney</h3>
