Changed Credit Coach banner image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="projects ">
         <a href="/credit-coach.html" class="project" id="mymoney">
           <div class="project-image">
-            <img src="img/mm1.png" alt="Absa Credit Coach">
+            <img src="img/credit_coach2.png" alt="Absa Credit Coach">
           </div>
           <div class="project-text">
             <h3>Absa Credit Coach</h3>
